src/test/resources/annotator/DuplicateFieldName_asOneofName.proto
syntax = "proto3";

package annotator;

message TestMessage {
    oneof <error descr="Duplicate name: value">value</error> {
        int32 <error descr="Duplicate name: value">value</error> = 1;
    }
}